[package]
name = "recasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bitvec = "1.0.1"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
deku = "0.16.0"
serde = { version = "1.0.199", features = ["derive"] }
toml = "0.8.12"
